--- a/resume.css
+++ b/resume.css
@@ -12,18 +12,18 @@ a {
 }
 
 #page-content {
-}
-
-#edited-date {
-    display: inline-block;
+    margin-top: 64px;
 }
 
 h1#name-header {
     display: inline-block;
+    margin: 0;
+    padding: 0;
 }
 
 span#edited-date {
     color: rgba(0,0,0,.5);
+    display: inline-block;
 }
 
 div#page-content > :not(:last-child) {
