--- a/app/elements/positions-list/positions-list.scss
+++ b/app/elements/positions-list/positions-list.scss
@@ -1,3 +1,14 @@
 :host {
   display: block;
 }
+
+.position-card {
+  display: inline-block;
+  background: white;
+  box-sizing: border-box;
+  width: 100px;
+  height: 100px;
+  margin: 16px;
+  padding: 16px;
+  border-radius: 2px;
+}
